[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Find the difference between arbitrary data structures"
documentation = "https://docs.rs/treediff"
keywords = ["diff", "structure", "tree", "arbitrary", "general"]
categories = ["algorithms"]
license = "MIT/Apache-2.0"
name = "treediff"
repository = "https://github.com/Byron/treediff-rs"
version = "3.0.1"

[dependencies]
rustc-serialize = {version = "0.3.22", optional = true}
serde_json = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0", optional = true }
serde_yaml = {version = "0.7", optional = true}
yaml-rust = {version = "0.4", optional = true}

sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }


[features]
with-rustc-serialize = ["rustc-serialize"]
with-serde-json = ["serde_json"]
with-serde-yaml = ["serde_yaml"]
with-yaml-rust = ["yaml-rust"]

